--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -64,7 +64,6 @@
                         android:id="@+id/user_name"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="@dimen/px10"
-                        android:text="刘墉"
                         android:textSize="@dimen/font_30px"
                         android:textColor="@color/white"
                         roundimg:gravity="center"
@@ -72,16 +71,17 @@
                         android:layout_height="wrap_content"/>
 
                 <LinearLayout
+                        android:id="@+id/evaluation_layout"
                         android:orientation="horizontal"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="@dimen/px15"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:visibility="gone">
 
                     <TextView
                             android:textColor="@color/white"
                             android:textSize="@dimen/font_26px"
-                            android:text="初级学员"
                             android:layout_gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
@@ -97,7 +97,7 @@
                 <TextView
                         android:textColor="@color/white"
                         android:textSize="@dimen/font_26px"
-                        android:text="疯狂是个儿童，在理智的花园里，做着美好的游戏"
+                        android:text="@string/default_profile_txt"
                         android:layout_marginTop="@dimen/px15"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="wrap_content"
@@ -115,7 +115,7 @@
                             android:id="@+id/following"
                             android:textColor="@color/white"
                             android:textSize="@dimen/font_26px"
-                            android:text="35 关注"
+                            android:text="0 关注"
                             android:layout_gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
@@ -132,7 +132,7 @@
                             android:textColor="@color/white"
                             android:textSize="@dimen/font_26px"
                             android:layout_marginLeft="@dimen/px30"
-                            android:text="660005 粉丝"
+                            android:text="0 粉丝"
                             android:layout_gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
@@ -145,10 +145,10 @@
                             android:background="@color/white"/>
 
                     <TextView
+                            android:id="@+id/lesson_teaching_duration"
                             android:textColor="@color/white"
                             android:textSize="@dimen/font_26px"
                             android:layout_marginLeft="@dimen/px30"
-                            android:text="230教学时长"
                             android:layout_gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
@@ -356,37 +356,37 @@
 
         <!--我的收藏-->
         <!--<RelativeLayout-->
-                <!--android:id="@+id/my_favorites_layout"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--style="@style/MinePageItem">-->
+        <!--android:id="@+id/my_favorites_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--style="@style/MinePageItem">-->
 
-            <!--<TextView-->
-                    <!--android:layout_alignParentLeft="true"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textColor="@color/font_black"-->
-                    <!--android:textSize="@dimen/px26"-->
-                    <!--android:textStyle="bold"-->
-                    <!--android:drawableLeft="@drawable/ic_my_favorites"-->
-                    <!--android:drawablePadding="@dimen/px20"-->
-                    <!--android:text="@string/my_collections"/>-->
+        <!--<TextView-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textColor="@color/font_black"-->
+        <!--android:textSize="@dimen/px26"-->
+        <!--android:textStyle="bold"-->
+        <!--android:drawableLeft="@drawable/ic_my_favorites"-->
+        <!--android:drawablePadding="@dimen/px20"-->
+        <!--android:text="@string/my_collections"/>-->
 
-            <!--<TextView-->
-                    <!--android:id="@+id/my_favorites"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_toLeftOf="@+id/enter_my_favorites"-->
-                    <!--android:textColor="@color/font_black"-->
-                    <!--android:textSize="@dimen/px26"-->
-                    <!--android:layout_marginRight="@dimen/px20"/>-->
+        <!--<TextView-->
+        <!--android:id="@+id/my_favorites"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_toLeftOf="@+id/enter_my_favorites"-->
+        <!--android:textColor="@color/font_black"-->
+        <!--android:textSize="@dimen/px26"-->
+        <!--android:layout_marginRight="@dimen/px20"/>-->
 
-            <!--<ImageView-->
-                    <!--android:id="@+id/enter_my_favorites"-->
-                    <!--android:layout_alignParentRight="true"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:src="@drawable/ic_entrance"/>-->
+        <!--<ImageView-->
+        <!--android:id="@+id/enter_my_favorites"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@drawable/ic_entrance"/>-->
         <!--</RelativeLayout>-->
 
         <View
