首页，我的页面，去掉多于的分割线

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -389,8 +389,8 @@
         <!--android:src="@drawable/ic_entrance"/>-->
         <!--</RelativeLayout>-->
 
-        <View
-                style="@style/DividerHorizontal2"/>
+        <!--<View
+                style="@style/DividerHorizontal2"/>-->
 
         <!--我的订单-->
         <RelativeLayout
