--- a/app/src/main/res/layout/layout_lesson_person_view.xml
+++ b/app/src/main/res/layout/layout_lesson_person_view.xml
@@ -22,7 +22,7 @@
                     android:scaleType="fitXY"
                     android:layout_centerInParent="true"
                     android:layout_alignParentLeft="true"
-                    android:src="@drawable/default_portrait"
+                    android:src="@drawable/default_avatar"
                     android:layout_width="@dimen/px80"
                     android:layout_height="@dimen/px80"/>
 
@@ -69,7 +69,7 @@
                     android:scaleType="fitXY"
                     android:layout_centerInParent="true"
                     android:layout_alignParentLeft="true"
-                    android:src="@drawable/default_portrait"
+                    android:src="@drawable/default_avatar"
                     android:layout_width="@dimen/px80"
                     android:layout_height="@dimen/px80"/>
 
