--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,11 +25,11 @@
         <RelativeLayout
                 android:id="@+id/home_search_wrapper"
                 android:layout_width="match_parent"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_marginRight="@dimen/px30"
+                android:layout_marginLeft="@dimen/px29"
+                android:layout_marginRight="@dimen/px29"
                 android:background="@drawable/ic_search_bg"
                 android:layout_gravity="center_vertical"
-                android:layout_height="wrap_content">
+                android:layout_height="@dimen/px58">
 
             <TextView
                     android:id="@+id/home_search"
@@ -38,7 +38,7 @@
                     android:layout_centerInParent="true"
                     android:text="@string/home_search_hint"
                     android:textColor="@color/search_gray"
-                    android:textSize="@dimen/font_28px"
+                    android:textSize="@dimen/font_25px"
                     android:drawablePadding="@dimen/px10"
                     android:gravity="center"
                     android:layout_height="wrap_content"/>
