--- a/app/src/main/res/layout/layout_moment_header.xml
+++ b/app/src/main/res/layout/layout_moment_header.xml
@@ -9,10 +9,12 @@
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
             app:oval="true"
+            app:border_width="@dimen/px2"
+            app:border_color="#f2f5f9"
             android:src="@drawable/default_avatar"
             android:scaleType="fitXY"
-            android:layout_width="@dimen/px90"
-            android:layout_height="@dimen/px90"/>
+            android:layout_width="@dimen/px77"
+            android:layout_height="@dimen/px77"/>
 
     <cn.xiaojs.xma.ui.view.FollowView
             android:id="@+id/moment_header_focus"
@@ -40,7 +42,7 @@
             <TextView
                     android:id="@+id/moment_header_name"
                     android:textColor="@color/font_black"
-                    android:textSize="@dimen/font_28px"
+                    android:textSize="@dimen/font_27px"
                     android:text="谢一名"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -48,9 +50,9 @@
             <TextView
                     android:id="@+id/moment_header_time"
                     android:textColor="@color/common_text"
-                    android:textSize="@dimen/font_24px"
+                    android:textSize="@dimen/font_21px"
                     android:text="2012-22-22"
-                    android:layout_marginLeft="@dimen/px30"
+                    android:layout_marginLeft="@dimen/px15"
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -66,7 +68,7 @@
                     android:id="@+id/moment_header_role"
                     android:layout_gravity="center_vertical"
                     android:textColor="@color/common_text"
-                    android:textSize="@dimen/font_24px"
+                    android:textSize="@dimen/font_23px"
                     android:text="同学"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
