--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:paddingLeft="@dimen/px57"
             android:paddingRight="@dimen/px57"
-            android:layout_marginTop="@dimen/px18"
+            android:layout_marginTop="@dimen/px156"
             android:layout_height="wrap_content"
             android:layout_below="@id/reg_back">
 
@@ -160,7 +160,7 @@
                     android:layout_height="wrap_content"
                     android:minWidth="@dimen/px160"
                     android:padding="@dimen/px10"
-                    android:textSize="@dimen/font_28px"
+                    android:textSize="@dimen/font_24px"
                     android:textColor="@color/white"
                     android:gravity="center"
                     android:background="@drawable/reg_verify_code_bg"
@@ -242,12 +242,13 @@
             android:layout_marginLeft="@dimen/px57"
             android:layout_marginRight="@dimen/px57"
             android:text="@string/register"
+            android:textStyle="bold"
             android:layout_below="@+id/reg_pwd_info"/>
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/px42"
+            android:layout_marginTop="@dimen/px38"
             android:gravity="center"
             android:orientation="horizontal"
             android:layout_below="@+id/register_btn">
