--- a/app/src/main/res/layout/layout_media_base_view.xml
+++ b/app/src/main/res/layout/layout_media_base_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:loading="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
@@ -9,15 +10,31 @@
             android:layout_height="match_parent"/>
 
     <FrameLayout
-            android:id="@+id/loading_view"
+            android:id="@+id/loading_layout"
             android:background="#85000000"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-        <ProgressBar
-                android:layout_gravity="center"
+        <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+            <cn.xiaojs.xma.ui.widget.LoadingView
+                    android:id="@+id/loading_progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    loading:lsize="@dimen/px60"/>
+            <TextView
+                    android:id="@+id/loading_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/font_white"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/px5"
+                    android:textSize="@dimen/font_26px"
+                    android:text="@string/video_loading"/>
+        </LinearLayout>
+
     </FrameLayout>
 </FrameLayout>
