教室，加载进度框调整

--- a/app/src/main/res/layout/layout_media_base_view.xml
+++ b/app/src/main/res/layout/layout_media_base_view.xml
@@ -12,6 +12,7 @@
     <FrameLayout
             android:id="@+id/loading_layout"
             android:background="#85000000"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <LinearLayout
