教室，白板框架修改。视频编辑调用新的fragment完成

--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -48,6 +48,13 @@
                 android:id="@+id/main_panel"
                 layout="@layout/layout_classroom_panel"/>
 
+        <FrameLayout
+                android:id="@+id/video_edit_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+        </FrameLayout>
+
     </FrameLayout>
 
     <FrameLayout
