修改所有分割线为统一颜色

--- a/app/src/main/res/drawable/grey_circle.xml
+++ b/app/src/main/res/drawable/grey_circle.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="oval"
        android:useLevel="false">
-    <solid android:color="@color/hor_divide_line2"/>
+    <solid android:color="@color/hor_divide_line"/>
     <size
             android:height="@dimen/px50"
             android:width="@dimen/px50"/>
