--- a/app/src/main/res/layout/activity_lession_detail.xml
+++ b/app/src/main/res/layout/activity_lession_detail.xml
@@ -52,7 +52,7 @@
 
     <View
             android:id="@+id/base_header_divider"
-            style="@style/DividerHorizontal2"/>
+            style="@style/DividerHorizontal"/>
 
     <ScrollView
             android:layout_width="match_parent"
