--- a/app/src/main/res/layout/layout_my_course_search.xml
+++ b/app/src/main/res/layout/layout_my_course_search.xml
@@ -45,5 +45,5 @@
                 android:layout_height="wrap_content"/>
     </LinearLayout>
 
-    <View style="@style/DividerHorizontal2"/>
+    <View style="@style/DividerHorizontal"/>
 </LinearLayout>
