--- a/app/src/main/res/drawable/light_grey_stoke_bg.xml
+++ b/app/src/main/res/drawable/light_grey_stoke_bg.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/light_grey"/>
     <stroke
-            android:color="@color/hor_divide_line3"
+            android:color="@color/hor_divide_line"
             android:width="@dimen/px1"/>
 </shape>
