--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -10,7 +10,7 @@
 
     <View
             android:id="@+id/base_header_divider"
-            style="@style/DividerHorizontal2"/>
+            style="@style/DividerHorizontal"/>
 
     <RelativeLayout
             android:layout_width="match_parent"
