--- a/app/src/main/res/layout/activity_base_tab.xml
+++ b/app/src/main/res/layout/activity_base_tab.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <View style="@style/DividerHorizontal3"/>
+        <View style="@style/DividerHorizontal"/>
 
         <LinearLayout
                 android:id="@+id/tab_menu"
