--- a/app/src/main/res/layout/activity_my_course_search.xml
+++ b/app/src/main/res/layout/activity_my_course_search.xml
@@ -53,7 +53,7 @@
     <View
             android:id="@+id/divider"
             android:layout_below="@id/title"
-            style="@style/DividerHorizontal2"/>
+            style="@style/DividerHorizontal"/>
 
 
     <cn.xiaojs.xma.common.pulltorefresh.core.PullToRefreshSwipeListView
