--- a/app/src/main/res/layout/layout_message_category_list_item.xml
+++ b/app/src/main/res/layout/layout_message_category_list_item.xml
@@ -6,7 +6,7 @@
               android:layout_height="wrap_content">
 
     <View
-            style="@style/DividerHorizontal2"/>
+            style="@style/DividerHorizontal"/>
 
     <TextView
             android:id="@+id/message_list_item_time"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"/>
 
     <View
-            style="@style/DividerHorizontal2"
+            style="@style/DividerHorizontal"
             android:layout_marginTop="@dimen/px30"/>
 
     <RelativeLayout
@@ -59,5 +59,5 @@
 
     <View
             android:id="@+id/message_list_item_bottom_divider"
-            style="@style/DividerHorizontal2"/>
+            style="@style/DividerHorizontal"/>
 </LinearLayout>
