--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -16,13 +16,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <cn.xiaojs.xma.ui.widget.RoundedImageView
+            <ImageView
                     android:id="@+id/personal_info_image"
                     android:scaleType="fitXY"
-                    android:src="@drawable/default_portrait"
                     android:layout_alignParentLeft="true"
                     android:layout_centerInParent="true"
-                    app:oval="true"
                     android:layout_width="@dimen/px100"
                     android:layout_height="@dimen/px100"/>
 
@@ -45,7 +43,6 @@
                         android:id="@+id/personal_info_desc"
                         android:textColor="@color/common_text"
                         android:textSize="@dimen/font_26px"
-                        android:text="自己喜欢的东西不要问别人好不好~"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
             </LinearLayout>
