--- a/app/src/main/res/layout/jmui_chat_item_receive_image.xml
+++ b/app/src/main/res/layout/jmui_chat_item_receive_image.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp" >
 
-        <cn.xiaojs.xma.common.im.CircleImageView
+        <ImageView
             android:id="@+id/jmui_avatar_iv"
             style="@style/jmui_chat_item_receiver_avatar_style"/>
 
