--- a/app/src/main/res/layout/jmui_chat_item_receive_text.xml
+++ b/app/src/main/res/layout/jmui_chat_item_receive_text.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp">
 
-        <cn.xiaojs.xma.common.im.CircleImageView
+        <ImageView
             android:id="@+id/jmui_avatar_iv"
             style="@style/jmui_chat_item_receiver_avatar_style"/>
 
@@ -37,7 +37,7 @@
             android:background="@drawable/ic_chat_other"
             android:paddingLeft="15dp"
             android:paddingRight="10dp"
-            android:textColor="#363333" />
+            android:textColor="#333333" />
 
     </RelativeLayout>
 
