--- a/app/src/main/res/layout/jmui_chat_item_send_text.xml
+++ b/app/src/main/res/layout/jmui_chat_item_send_text.xml
@@ -7,7 +7,7 @@
         android:id="@+id/jmui_send_time_txt"
         style="@style/jmui_chat_text_date_style"/>
 
-    <cn.xiaojs.xma.common.im.CircleImageView
+    <ImageView
         android:id="@+id/jmui_avatar_iv"
         android:layout_below="@+id/jmui_send_time_txt"
         style="@style/jmui_chat_item_sender_avatar_style" />
@@ -23,7 +23,8 @@
         android:layout_marginRight="3dp"
         android:background="@drawable/ic_chat_me"
         android:paddingLeft="10dp"
-        android:paddingRight="15dp" />
+        android:paddingRight="15dp"
+        android:textColor="@color/font_white"/>
 
     <ImageView
         android:id="@+id/jmui_sending_iv"
